# hausa_lm

./: .gitignore  Makefile  README.md  a.json  finetune_hf.py  main.py  model_config.yaml  pyproject.toml  train_hf.py  train_tokenizer.py  train_xlstm.py  trainer_arguments.yaml
configs/: data_mix_config.yaml  tokenizer_config.yaml  train_hf.yaml  train_vae.yaml  train_xlstm.yaml
configs/data_mix/: base.yaml
configs/model/: Qwen_Qwen3-0.6B.yaml  gemma2.yaml  vae.yaml  xlstm.yaml
configs/trainer/: base.yaml
hausa_lm/: __init__.py  config.py  data.py  utils.py
hausa_lm/modules/: __init__.py  contrastive_lstm.py  model.py  text.py  utils.py  vision.py
hausa_lm/trainer/: __init__.py  arguments.py  trainer.py
scripts/: config_export.py  create_datamix.py  train_hf.py  train_tokenizer.py  train_vae.py  train_xlstm.py
src/data/: grain.py  hf.py  mixture.py  rules.py
src/data/image/: data.py  transforms.py
src/models/: __init__.py  bert.py
src/models/bert/: bert.py
src/models/common/: ops.py
src/models/gemma2/: gemma2_converter.py  modeling_gemma2.py
src/models/qwen3/: __init__.py  modeling_qwen3.py  qwen3_converter.py
src/models/vae/: __init__.py  vae.py
src/trainer/: base_arguments.py  helpers.py
src/utils/: inference.py  modules.py  tensorboard.py
xlstm_jax/: xlstm_lm_model.py
